# Equayes

./: .gitignore  CHANGELOG.md  CONTRIBUTING_GitHub.md  LICENSE  MANIFEST.in  README.md  equayes.yml  pyproject.toml
docs/source/: conf.py  index.md  start.md
docs/source/_ecml/: .creation_info.yml
docs/source/default_pages/: _toc_default_pages.md  cicd.md  contribute.md  directory_structure_description.md  engineering_diary.md  useful_links.md  workflow.md
docs/source/default_pages/features/: _more_features.md  _toc_features.md  configuration.md  installability.md  logging.md  sphinx_docs.md  unittests.md  versioning.md
docs/source/default_pages/notebooks/: Example_Notebook.ipynb  _toc_notebooks.md  layout_showcase.ipynb  math_showcase.ipynb
docs/source/notebooks/: _toc_notebooks.md
equayes/: __init__.py  __main__.py
equayes/config/: README.md
equayes/config/base/: globals.yml  logging_config.yml  parameters.yml
equayes/core/: constraints.py  equayes.py
equayes/core/pyro_backend/: sympy_to_pyro.py  utils.py
equayes/core/sympy_backend/: utils.py
equayes/utils/: __init__.py  configuration.py  helper_functions.py  log.py  package.py  scanner.py
equayes/visualisation/: predictive_plotting.py
notebooks/: cantilever_equayes.ipynb  showcase_equayes.ipynb
tests/: test_utils.py
tests/core/: base_equayes_test.py  test_equayes_different_expressions_executable.py  test_equayes_inference_algos_executable.py  test_equayes_persistence.py
