[build-system]
requires = [
    "setuptools >= 60",
    "setuptools_scm[toml] >= 8.0.1",
    # add requirements as your package needs
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "equayes/__version__.py" 
git_describe_command = "git describe --tags --match v* "

[tool.setuptools.packages.find]
include = ["equayes"]

[project]
name = "MCL_Equayes"
dynamic = ["version"]  # Die Version wird von setuptools_scm aus dem Git-Tag extrahiert, beginnend mit 'v...'
readme = "README.md"
authors = [
    { name="MCLProbability", email="240669060+mclprobability@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "setuptools_scm ==8.0.1",
    "pyyaml ==5.3",
    "parameterized == 0.9.0",
    "arviz == 0.23.4",
    "matplotlib == 3.10.8",
    "numpy == 2.4.2",
    "pandas == 3.0.1",
    "pyro-ppl == 1.9.1",
    "scipy == 1.17.0",
    "sympy == 1.14.0",
    "torch == 2.10.0",
    "scikit-learn == 1.8.0",
    "parameterized == 0.9.0",
    # add dependencies as your package needs
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: BSD-3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
docs = [
    "setuptools_scm",
    "sphinx",
    "myst-nb",
    "sphinx-autoapi>=3",
    "sphinx-book-theme",
    "graphviz",
    "sphinx-design",
    "sphinx-proof",
    "wheel",
    # add optional dependencies as your package needs
]

[project.scripts]
scanner = "equayes.utils.scanner:main"
package = "equayes.utils.package:main"
